applications/homeassistant/base/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: homeassistant
subsets:
  - addresses:
      - ip: 192.168.1.86
    ports:
      - name: http
        port: 8123
        protocol: TCP
