applications/homeassistant/base/endpointslice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: homeassistant-1
  labels:
    kubernetes.io/service-name: homeassistant
addressType: IPv4
ports:
  - name: http
    port: 8123
    protocol: TCP
endpoints:
  - addresses:
      - 192.168.1.86
