applications/homeassistant/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
spec:
  ports:
    - name: http
      port: 8123
      targetPort: 8123
