applications/homeassistant/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/hostname: ha.kszpakowski.com
spec:
  tls:
    - hosts:
        - ha.kszpakowski.com
      secretName: homeassistant-cert
  rules:
    - host: ha.kszpakowski.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homeassistant
                port:
                  name: http
